Fixed Homepage Widgets Alignment Issue
ngallow2 & billiu2

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -450,6 +450,7 @@ body {
 #bottom-bar #widgets-area {
 	position: absolute;
 	bottom: 0;
+	left: 0;
 	width: 75%;
 }
 
@@ -458,6 +459,7 @@ body {
 	height: 300px;
 	width: 25%;
 	margin-right: 8%;
+	float: left;
 	display: inline-block;
 	vertical-align: bottom;
 	background-color: rgba(0,0,0,0.2);
